--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-MONGO_URI="mongodb+srv://taste_map:tPolIa2cywOtNDiv@cluster0.xuhjwlm.mongodb.net/?appName=Cluster0"
+# MONGO_URI="mongodb+srv://taste_map:tPolIa2cywOtNDiv@cluster0.xuhjwlm.mongodb.net/?appName=Cluster0"
+MONGO_URI="mongodb://127.0.0.1:27017/taste_map"
 PORT=5000
 JWT_SECRET=tastemapsecretkey123
